# poc-trading-bot

./: .gitignore  CLAUDE.md  plan.md  plan_website.md  pyproject.toml  real-market-plan.md
config/: alerting.yaml  bot.yaml  symbols.yaml
reports/: backtest_8sym_grid50_best_2024_01_to_2026_05_equity10k_mainnet_like.md  backtest_batch1.txt  backtest_batch2  backtest_batch2.txt  backtest_batch2_final.txt  backtest_batch3.txt  backtest_batch3_clean.txt  backtest_recommended8_grid50_best_2022_05_09_to_2026_05_21_mainnet_like.md  backtest_top12_grid50_best_24m_6m_mainnet_like_2026_05_20.md  backtest_top13_grid50_best_2022_05_09_to_2024_11_04_mainnet_like.md  backtest_top_assets_2022_2023.txt  backtest_xlmusdt_grid50_best_2022_05_09_to_2024_11_04_mainnet_like.md  backtest_xmrusdt_grid50_best_continue_2022_05_09_to_2026_05_21_mainnet_like.md  batch_optimize_stability_2024_2026_core.md  batch_optimize_stability_2024_2026_core_shard00of08.md  batch_optimize_stability_2024_2026_core_shard01of08.md  batch_optimize_stability_2024_2026_core_shard02of08.md  batch_optimize_stability_2024_2026_core_shard03of08.md  batch_optimize_stability_2024_2026_core_shard04of08.md  batch_optimize_stability_2024_2026_core_shard05of08.md  batch_optimize_stability_2024_2026_core_shard06of08.md  batch_optimize_stability_2024_2026_core_shard07of08.md  best_signal_for_1_5pct_monthly_tp100_equity50000.md  candidate_currency_ranking_grid50_best_2026_05_21.md  compare_current_2024_05_to_2026_05.md  compare_execution_2022_05_09_to_2023_10_30_current_core6.md  (+97 more)
scripts/: backtest_v1_v2_into_v3.py  (+24 more)
(+110 files in other folders)
