[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-trading-bot"
version = "0.1.0"
description = "Bybit USDT-perp signal-based limit scalp bot with auto-merge TP at BEP"
requires-python = ">=3.11"
dependencies = [
    "pybit>=5.7.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "aiolimiter>=1.1",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "ulid-py>=1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
]

[project.scripts]
trading-bot = "bot.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "testnet: integration tests against Bybit testnet (opt-in)",
]
